--- a/style/style.css
+++ b/style/style.css
@@ -12,6 +12,7 @@ body {
 }
 header {
   position: sticky;
+  z-index: 15;
   /* background: #fff;
         top: 0;
         left: 0; */
@@ -37,6 +38,10 @@ header {
   background-image: url("../images/profile.png");
   background-size: cover;
   margin-right: 10px;
+  transition: all 0.5s;
+}
+.logo__img:hover {
+  transform: scale(1.2);
 }
 .logo__title {
   font-size: 30px;
@@ -75,6 +80,16 @@ header {
 .links__nav-link:hover::before {
   transform: scaleX(1);
 }
+.layer-shape {
+  clip-path: ellipse(39% 51% at 83% 16%);
+  position: absolute;
+  top: 100px;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 4;
+  background: #0084ff;
+}
 .home {
   height: 80vh;
   background: #fbfbfb;
@@ -100,14 +115,46 @@ header {
 .section__col--details {
   margin-top: 50px;
 }
+.shape-layer--1 {
+  clip-path: ellipse(49% 43% at 21% 37%);
+  position: absolute;
+  top: 100px;
+  left: 0;
+  background: #eaf4fe;
+  width: 50%;
+  height: 100%;
+}
+.shape-layer--2 {
+  clip-path: ellipse(66% 58% at 30% 5%);
+  position: absolute;
+  top: 100px;
+  left: 0;
+  background: #eaf4fe;
+  width: 50%;
+  height: 100%;
+}
+.shape-layer--3 {
+  clip-path: ellipse(56% 35% at 30% 5%);
+  position: absolute;
+  top: 100px;
+  left: 0;
+  background: #eaf4fe;
+  width: 70%;
+  height: 100%;
+}
+.home__col--left {
+  z-index: 10;
+}
 .home__img {
   background-image: url("../images/home-picture.png");
-  height: 500px;
-  width: 500px;
+  height: 650px;
+  width: 650px;
+  opacity: 1;
   margin: 0 auto;
   background-size: cover;
   background-repeat: no-repeat;
 }
+
 .home__title {
   font-size: 50px;
   font-weight: bold;
@@ -124,7 +171,8 @@ header {
   margin: 40px 0;
 }
 .home__contact-link {
-  background: #2a4e98;
+  background: #5785c3;
+  /* border: 4px solid #2a4e98; */
   color: #fff;
   margin-top: 30px;
   padding: 13px 27px;
@@ -137,7 +185,7 @@ header {
   color: #eee;
 }
 .home__contact-link:hover {
-  background: rgb(51, 96, 160);
+  background: #2a4e98;
 }
 .arrow-container {
   position: relative;
@@ -196,10 +244,15 @@ header {
   letter-spacing: 0.3px;
 }
 .projects-header {
-  background: #2a4e98;
+  background: #5785c3;
+  /* border-top: solid 8px #2a4e98;
+  border-bottom: solid 8px #2a4e98; */
   height: 180px;
   position: relative;
-  box-shadow: 0px 0px 23px -1px rgba(0, 0, 0, 0.75);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0px 0px 13px -1px rgba(0, 0, 0, 0.25);
   z-index: 4;
 }
 .sample-projects__header {
@@ -312,8 +365,14 @@ header {
 .icon-messanger {
   color: #0084ff;
 }
+.icon-copy {
+  color: #2a4e98;
+}
 .icon-heart {
   color: red;
+}
+.icon-send {
+  color: #eee;
 }
 td {
   padding: 2px 0;
